[tool.poetry]
name = "httpstan"
version = "4.11.0"
description = "HTTP-based interface to Stan, a package for Bayesian inference."
authors = [
  "Allen Riddell <riddella@indiana.edu>",
  "Ari Hartikainen <ahartikainen@users.noreply.github.com>",
  "Matthew Carter <m.j.carter2@liverpool.ac.uk>",
]
license = "ISC"
readme = "README.rst"
homepage = "https://mc-stan.org"
repository = "https://github.com/stan-dev/httpstan"
documentation = "https://httpstan.readthedocs.io"
build = "build.py"

classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: ISC License (ISCL)",
]
# include: poetry automatically excludes paths mentioned in .gitignore, selectively add back
include = [
  "httpstan/*.o",
  "httpstan/*.cpp",
  "httpstan/lib/libsundials*",
  "httpstan/lib/libtbb*",
  "httpstan/stanc",
  "httpstan/include/**/*",
  "doc/openapi.yaml",
]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = ">=48.0"
aiohttp = "^3.7"
appdirs = "^1.4"
webargs = "^8.0"
marshmallow = "^3.10"
numpy = "^1.19"

[tool.poetry.dev-dependencies]
alabaster="0.7.13"
apispec={ version = "4.7.1", extras = ["validation","yaml"]}
astroid="2.15.6"
atomicwrites="1.4.1"
attrs="23.1.0"
autoflake="1.7.8"
babel="2.12.1"
black="22.3.0"
certifi="2023.7.22"
chardet="5.2.0"
charset-normalizer="3.2.0"
click="8.1.7"
colorama="0.4.6"

deepmerge="1.1.0"
docutils="0.17.1"
flake8="3.9.2"
idna="3.4"
imagesize="1.4.1"
importlib-metadata="6.8.0"
importlib-resources="5.13.0"
iniconfig="2.0.0"
isort="5.12.0"
jinja2="3.1.2"
jsonschema-spec="0.1.6"
jsonschema="4.17.3"
lazy-object-proxy="1.9.0"
markupsafe="2.1.3"
mccabe="0.6.1"
mistune="2.0.5"
mypy-extensions="1.0.0"
mypy="0.981"
openapi-schema-validator="0.4.4"
openapi-spec-validator="0.5.7"
packaging="23.1"
pathable="0.4.3"
pathspec="0.11.2"
picobox="3.0.0"
pkgutil-resolve-name="1.3.10"
platformdirs="3.10.0"
pluggy="1.3.0"
prance={ version = "23.6.21.0", extras = ["osv"] }
py="1.11.0"
pycodestyle="2.7.0"
pyflakes="2.3.1"
pygments="2.16.1"
pyrsistent="0.19.3"
pytest-asyncio="0.15.1"
pytest="6.2.5"
pytz="2023.3.post1"
pyyaml="6.0.1"
requests="2.31.0"
rfc3339-validator="0.1.4"
ruamel-yaml-clib="0.2.7"

ruamel-yaml="0.17.32"
six="1.16.0"
snowballstemmer="2.2.0"
sphinx-autoapi="1.9.0"
sphinx-mdinclude="0.5.3"
sphinx-rtd-theme="1.3.0"
sphinx="4.5.0"
sphinxcontrib-applehelp="1.0.4"
sphinxcontrib-devhelp="1.0.2"
sphinxcontrib-htmlhelp="2.0.1"
sphinxcontrib-httpdomain="1.8.1"
sphinxcontrib-jquery="4.1"
sphinxcontrib-jsmath="1.0.1"
sphinxcontrib-openapi="0.8.1"
sphinxcontrib-qthelp="1.0.3"
sphinxcontrib-redoc="1.6.0"
sphinxcontrib-serializinghtml="1.1.5"
toml="0.10.2"
tomli="2.0.1"
typing-extensions="4.8.0"
unidecode="1.3.6"
urllib3="2.0.5"
wrapt="1.15.0"
zipp="3.17.0"

[tool.black]
line-length = 119
exclude = 'httpstan/include'

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = "httpstan,tests"
known_local_folder = "helpers"
skip_glob = ['httpstan/include/*']

[tool.coverage.run]
branch = true
omit = ["httpstan/__main__.py"]

[tool.coverage.report]
fail_under = 20

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
