[metadata]
name = httpstan
summary = HTTP-based interface to Stan, a package for Bayesian inference.
description-file =
    README.rst
author = httpstan developers
classifier =
    Intended Audience :: Science/Research
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    httpstan

[extension=httpstan.spsc_queue]
sources =
    httpstan/spsc_queue.cpp
language = c++
include_dirs =
    httpstan/lib/stan/lib/stan_math_2.15.0/lib/boost_1.62.0

[extension=httpstan.stan]
sources =
    httpstan/stan.cpp
language = c++
include_dirs =
    httpstan
    httpstan/lib/stan/src
    httpstan/lib/stan/lib/stan_math_2.15.0
    httpstan/lib/stan/lib/stan_math_2.15.0/lib/eigen_3.2.9
    httpstan/lib/stan/lib/stan_math_2.15.0/lib/boost_1.62.0
    httpstan/lib/stan/lib/stan_math_2.15.0/lib/cvodes_2.9.0/include


[extension=httpstan.compile]
sources =
    httpstan/compile.cpp
    httpstan/lib/stan/src/stan/lang/ast_def.cpp
    httpstan/lib/stan/src/stan/lang/grammars/bare_type_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/expression07_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/expression_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/functions_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/indexes_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/program_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/semantic_actions_def.cpp
    httpstan/lib/stan/src/stan/lang/grammars/statement_2_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/statement_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/term_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/var_decls_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/whitespace_grammar_inst.cpp
language = c++
extra_compile_args =
    -O2
    -ftemplate-depth-256
    -Wno-unused-function
    -Wno-uninitialized
define_macros =
    BOOST_RESULT_OF_USE_TR1
    BOOST_NO_DECLTYPE
    BOOST_DISABLE_ASSERTS
include_dirs =
    httpstan
    httpstan/lib/stan/src
    httpstan/lib/stan/lib/stan_math_2.15.0
    httpstan/lib/stan/lib/stan_math_2.15.0/lib/eigen_3.2.9
    httpstan/lib/stan/lib/stan_math_2.15.0/lib/boost_1.62.0
    httpstan/lib/stan/lib/stan_math_2.15.0/lib/cvodes_2.9.0/include

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html
