[metadata]
name = httpstan
summary = HTTP-based interface to Stan, a package for Bayesian inference.
description-file =
    README.rst
author = httpstan developers
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    httpstan

[extension=httpstan.spsc_queue]
sources =
    httpstan/spsc_queue.cpp
include_dirs =
    httpstan/lib/stan/lib/stan_math/lib/boost_1.62.0
language = c++
extra_compile_args =
    -O3
    -std=c++11

[extension=httpstan.stan]
sources =
    httpstan/stan.cpp
include_dirs =
    httpstan
    httpstan/lib/stan/src
    httpstan/lib/stan/lib/stan_math
    httpstan/lib/stan/lib/stan_math/lib/eigen_3.3.3
    httpstan/lib/stan/lib/stan_math/lib/boost_1.62.0
    httpstan/lib/stan/lib/stan_math/lib/cvodes_2.9.0/include
language = c++
extra_compile_args =
    -O3
    -std=c++11

[extension=httpstan.compile]
sources =
    httpstan/compile.cpp
    httpstan/lib/stan/src/stan/lang/ast_def.cpp
    httpstan/lib/stan/src/stan/lang/grammars/bare_type_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/expression07_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/expression_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/functions_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/indexes_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/program_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/semantic_actions_def.cpp
    httpstan/lib/stan/src/stan/lang/grammars/statement_2_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/statement_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/term_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/var_decls_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/whitespace_grammar_inst.cpp
include_dirs =
    httpstan
    httpstan/lib/stan/src
    httpstan/lib/stan/lib/stan_math
    httpstan/lib/stan/lib/stan_math/lib/eigen_3.3.3
    httpstan/lib/stan/lib/stan_math/lib/boost_1.62.0
    httpstan/lib/stan/lib/stan_math/lib/cvodes_2.9.0/include
language = c++
extra_compile_args =
    -O3
    -std=c++11

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html
