[metadata]
name = httpstan
summary = HTTP-based interface to Stan, a package for Bayesian inference.
description-file =
    README.rst
author = httpstan developers
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    httpstan

[extension=httpstan.stan]
sources =
    httpstan/stan.cpp
# when updating library paths, remember to update them in httpstan/models.py
include_dirs =
    httpstan
    httpstan/lib/stan/src
    httpstan/lib/stan/lib/stan_math
    httpstan/lib/stan/lib/stan_math/lib/eigen_3.3.3
    httpstan/lib/stan/lib/stan_math/lib/boost_1.69.0
    httpstan/lib/stan/lib/stan_math/lib/sundials_4.1.0/include
    /usr/include/google/protobuf
library_dirs =
    /usr/lib/x86_64-linux-gnu
libraries =
    protobuf
language = c++
extra_compile_args =
    -O3
    -std=c++1y
    # MinGW fix, https://github.com/python/cpython/pull/11283
    -D_hypot=hypot

[extension=httpstan.compile]
sources =
    httpstan/compile.cpp
    httpstan/lib/stan/src/stan/lang/ast_def.cpp
    httpstan/lib/stan/src/stan/lang/grammars/bare_type_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/block_var_decls_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/expression07_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/expression_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/functions_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/indexes_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/local_var_decls_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/program_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/semantic_actions_def.cpp
    httpstan/lib/stan/src/stan/lang/grammars/statement_2_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/statement_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/term_grammar_inst.cpp
    httpstan/lib/stan/src/stan/lang/grammars/whitespace_grammar_inst.cpp
define_macros =
    BOOST_DISABLE_ASSERTS
    BOOST_PHOENIX_NO_VARIADIC_EXPRESSION
include_dirs =
    httpstan
    httpstan/lib/stan/src
    httpstan/lib/stan/lib/stan_math
    httpstan/lib/stan/lib/stan_math/lib/eigen_3.3.3
    httpstan/lib/stan/lib/stan_math/lib/boost_1.69.0
    httpstan/lib/stan/lib/stan_math/lib/sundials_4.1.0/include
language = c++
extra_compile_args =
    -O3
    -std=c++1y
    # MinGW fix, https://github.com/python/cpython/pull/11283
    -D_hypot=hypot
